--- a/css/styles.css
+++ b/css/styles.css
@@ -679,19 +679,38 @@ body {
     background-color: var(--accent-color);
 }
 
-.under-form {
-    color: var(--primary-white-color);
+.contact-form {
+    margin-left: 93px;
+    display: block;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    color: var(--primary-white-color);
+    /* color: var(--primary-white-color);
+    font-weight: 700;
+    
+    letter-spacing: 0.03em;
+    text-transform: uppercase; */
 }
 
-.contact-form {
-    display: flex;
+.contact-form-under {
+    width: 100%;
+    min-height: 50px;
+
+    /* flex-direction: column; */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 0px 4px 4px rgba 0, 0, 0, 0.15;
+    border-radius: 4px;
+    resize: none;
 }
 
+.contact-form-under:focus {
+}
+
+.contact-form-btn {
+}
 /*================ MODAL WINDOW =================== */
 
 .backdrop {
@@ -743,10 +762,10 @@ body {
     transition: border-color var(--transition-dur-and-funk);
 }
 
-.modal-close-btn:hover,
+/* .modal-close-btn:hover,
 .modal-close-btn:focus {
     border-color: var(--accent-color);
-}
+} */
 
 .modal-close-btn-icon {
     transition: fill var(--transition-dur-and-funk);
@@ -755,4 +774,131 @@ body {
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
     fill: var(--accent-color);
+}
+/* ==================== /MODAL WINDOW ==================== */
+/* ==================== MODAL FORM ==================== */
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-field {
+    margin-bottom: 16px;
+}
+
+.modal-form-input-desc {
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.2;
+    margin-bottom: 8px;
+    color: #303030;
+}
+
+.modal-form-input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #555555;
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-color: teal;
+    transition: background-color var(--transition-dur-and-func);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+    background-color: var(--accent-color);
+}
+
+.modal-form-message {
+    width: 100%;
+    height: 100px;
+    padding: 10px 16px;
+    resize: none;
+    border-radius: 4px;
+    transition: border-color var(--transition-dur-and-func);
+}
+
+.modal-form-message::placeholder {
+    font-size: 14px;
+    color: #555555;
+    text-transform: uppercase;
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-check-desc {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.modal-form-check-desc::before {
+    display: block;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #303030;
+    content: '';
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before {
+    background-color: var(--accent-color);
+    box-shadow: inset 0 0 0 4px rgb(255, 255, 255);
+}
+
+.modal-form-check:focus + .modal-form-check-desc::before {
+    outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+.modal-form-submit {
+    min-width: 160px;
+    align-self: center;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid #ff6c00;
+    border-radius: 25px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    background-color: transparent;
+    transition: color var(--transition-dur-and-func),
+        background-color var(--transition-dur-and-func);
+    color: var(--secondary-text-color-theme-light);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
 }
