--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
 .page-nav {
     display: flex;
     align-items: center;
-    position: var(--transition-dur-and-funk);
+    position: color var(--transition-dur-and-funk);
 }
 
 /* Логотип */
@@ -614,10 +614,11 @@ body {
     margin-top: 20px;
 }
 
-.under-address-social {
+.under-container {
     display: flex;
     align-items: baseline;
-    /* justify-content: center; */
+}
+.under-address-social {
 }
 
 .address {
@@ -684,13 +685,14 @@ body {
 }
 
 .contact-form {
-    align-content: stretch;
     margin-left: 93px;
-    /* margin-right: 215px; */
-    display: block;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .messege-form {
+    margin-top: 0;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -702,27 +704,62 @@ body {
 
 .contact-form-under {
     display: flex;
-    justify-items: center;
+    justify-content: center;
 }
 
 .contact-form-input {
-    min-height: 50px;
+    width: 358px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
     margin-right: 12px;
+    color: var(--primary-white-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+    outline: none;
     background-color: var(--primary-theme-dark);
+    transition: border-color var(--transition-dur-and-funk);
 }
-.contact-form-input:focus {
+
+.contact-form-input:hover {
+    border-color: var(--accent-color);
+    outline: none;
 }
-.form-email input::placeholder {
+.contact-form-input input::placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
 
 .contact-form-btn {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    color: var(--primary-white-color);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 8px 28px;
+    border: none;
+    transition: color var(--transition-dur-and-funk),
+        background-color var(--transition-dur-and-funk);
+}
+.contact-form-btn:focus,
+.contact-form-btn:hover {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: var(--accent-color);
+}
+.form-form-btn-icon {
+    fill: var(--primary-white-color);
+    margin-left: 10px;
 }
 
-resize: none;
 /*================ MODAL WINDOW =================== */
 
 .backdrop {
@@ -749,6 +786,7 @@ resize: none;
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
+    padding: 40px;
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -771,13 +809,8 @@ resize: none;
     background: var(--primary-white-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
-    transition: border-color var(--transition-dur-and-funk);
+    transition: background-color var(--transition-dur-and-funk);
 }
-
-/* .modal-close-btn:hover,
-.modal-close-btn:focus {
-    border-color: var(--accent-color);
-} */
 
 .modal-close-btn-icon {
     transition: fill var(--transition-dur-and-funk);
@@ -786,6 +819,7 @@ resize: none;
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
     fill: var(--accent-color);
+    border-color: var(--accent-color);
 }
 /* ==================== /MODAL WINDOW ==================== */
 /* ==================== MODAL FORM ==================== */
@@ -794,17 +828,29 @@ resize: none;
     flex-direction: column;
 }
 
+.modal-form-text {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--basic-color);
+    margin-bottom: 12px;
+    margin-top: 0;
+}
+
 .modal-form-field {
-    margin-bottom: 16px;
+    margin-bottom: 10px;
 }
 
 .modal-form-input-desc {
     display: block;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 1.16;
     margin-bottom: 8px;
-    color: #303030;
+    color: var(--primary-color);
+    margin-bottom: 4px;
 }
 
 .modal-form-input-wrapper {
@@ -815,7 +861,7 @@ resize: none;
 .modal-form-input {
     width: 100%;
     height: 40px;
-    border: 1px solid #555555;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 42px;
     transition: border-color var(--transition-dur-and-func);
@@ -831,30 +877,35 @@ resize: none;
     top: 50%;
     left: 12px;
     transform: translateY(-50%);
-    display: block;
     width: 18px;
     height: 18px;
-    background-color: teal;
-    transition: background-color var(--transition-dur-and-func);
+    transition: fill var(--transition-dur-and-func);
 }
 
 .modal-form-input:focus + .modal-form-input-icon {
-    background-color: var(--accent-color);
+    fill: var(--accent-color);
+}
+
+.change-modal-form-field {
+    margin-bottom: 20px;
 }
 
 .modal-form-message {
     width: 100%;
     height: 100px;
-    padding: 10px 16px;
+    padding: 12px 16px;
     resize: none;
     border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     transition: border-color var(--transition-dur-and-func);
 }
 
 .modal-form-message::placeholder {
-    font-size: 14px;
-    color: #555555;
-    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-form-message:focus {
@@ -865,52 +916,65 @@ resize: none;
 .modal-form-check-desc {
     display: flex;
     align-items: center;
-    font-size: 14px;
-    margin-bottom: 20px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+    color: var(--primary-color);
 }
 
 .modal-form-check-desc::before {
     display: block;
-    width: 18px;
-    height: 18px;
-    border: 1px solid #303030;
     content: '';
-    cursor: pointer;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--basic-color);
     border-radius: 4px;
-    margin-right: 10px;
+    margin-right: 8px;
+    cursor: pointer;
 }
 
 .modal-form-check:checked + .modal-form-check-desc::before {
+    align-items: center;
+    text-align: center;
+    border: 2px solid var(--accent-color);
     background-color: var(--accent-color);
-    box-shadow: inset 0 0 0 4px rgb(255, 255, 255);
+    background-image: url(../images/icon/icon-check.svg);
+    transition: outline var(--transition-dur-and-funk);
 }
 
 .modal-form-check:focus + .modal-form-check-desc::before {
-    outline: 2px solid rgba(0, 0, 255, 0.5);
+    outline: var(--accent-color);
+}
+
+.text-form-check-desc {
+    color: var(--accent-color);
+    text-decoration-line: underline;
 }
 
 .modal-form-submit {
-    min-width: 160px;
-    align-self: center;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border: 1px solid #ff6c00;
-    border-radius: 25px;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
-    background-color: transparent;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    display: block;
+    align-items: center;
+    text-align: center;
+    border-style: none;
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    color: var(--primary-white-color);
+    padding: auto;
+    margin: auto;
+    text-decoration: none;
     transition: color var(--transition-dur-and-func),
-        background-color var(--transition-dur-and-func);
-    color: var(--secondary-text-color-theme-light);
+        background-color var(--transition-dur-and-funk);
 }
 
 .modal-form-submit:hover,
 .modal-form-submit:focus {
-    background-color: var(--accent-color);
-    color: #ffffff;
+    background-color: #188ce8;
+    color: var(--primary-white-color);
 }
