--- a/css/styles.css
+++ b/css/styles.css
@@ -892,7 +892,7 @@ body {
 
 .modal-form-message {
     width: 100%;
-    height: 100px;
+    height: 120px;
     padding: 12px 16px;
     resize: none;
     border-radius: 4px;
@@ -919,6 +919,7 @@ body {
     line-height: 1.71;
     letter-spacing: 0.03em;
     margin-bottom: 30px;
+    justify-content: center;
     color: var(--primary-color);
 }
 
@@ -940,6 +941,8 @@ body {
     background-color: var(--accent-color);
     background-image: url(../images/icon/icon-check.svg);
     transition: outline var(--transition-dur-and-funk);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .modal-form-check:focus + .modal-form-check-desc::before {
